--- a/src/package.json
+++ b/src/package.json
@@ -1,1 +1,15 @@
-{}
+{
+    "name": "@master/variants",
+    "license": "MIT",
+    "description": "",
+    "author": "Aoyue Design LTD.",
+    "main": "index.js",
+    "types": "index.d.ts",
+    "private": false,
+    "keywords": [],
+    "peerDependencies": {},
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/master-style/variants.git"
+    }
+}
