--- a/.releaserc.json
+++ b/.releaserc.json
@@ -5,5 +5,19 @@
         "@semantic-release/release-notes-generator",
         "@semantic-release/github",
         "@semantic-release/npm"
+    ],
+    "branches": [
+        "+([0-9])?(.{+([0-9]),x}).x",
+        "main",
+        "next",
+        "next-major",
+        {
+            "name": "beta",
+            "prerelease": true
+        },
+        {
+            "name": "alpha",
+            "prerelease": true
+        }
     ]
 }
