--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "css-loader": "^6.5.1",
         "globby": "^11.0.4",
         "mini-css-extract-plugin": "^2.4.5",
+        "postcss-loader": "^6.2.1",
         "sass": "^1.44.0",
         "sass-loader": "^12.3.0",
         "semantic-release": "^18.0.1",
