--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "scripts": {
         "update": "git fetch package standard && git merge package/standard",
         "build": "npm i && cd src && npm i && cd ../ && webpack",
-        "release": "semantic-release || true"
+        "release": "npm i semantic-release@18 @semantic-release/exec@6 && semantic-release || true"
     },
     "dependencies": {
         "@babel/core": "^7.16.0",
@@ -25,7 +25,6 @@
         "postcss-loader": "^6.2.1",
         "sass": "^1.44.0",
         "sass-loader": "^12.3.0",
-        "semantic-release": "^18.0.1",
         "style-loader": "^3.3.1",
         "terser-webpack-plugin": "^5.2.5",
         "ts-loader": "^9.2.6",
