--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
     "scripts": {
         "update": "git fetch package standard && git merge package/standard",
         "build": "npm i --production && cd src && npm i && cd .. && webpack --config webpack.prod.js",
-        "install": "cd src && npm i && cd .. && npm i",
-        "serve": "npm run install && webpack serve --config webpack.dev.js",
-        "start": "npm run install && webpack serve --config webpack.dev.js --open",
+        "serve": "cd src && npm i && cd .. && npm i && webpack serve --config webpack.dev.js",
+        "start": "cd src && npm i && cd .. && npm i && webpack serve --config webpack.dev.js --open",
         "update:readme": "m package render README.md"
     },
     "dependencies": {
