--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,11 @@
         ]
     },
     "include": [
-        "./src/**/*index.ts"
+        "./src/**/*index.ts",
+        "./src/**/*.d.ts",
+        "./declaration.d.ts"
+    ],
+    "exclude": [
+        "./src/node_modules"
     ]
 }
