--- a/src/package.json
+++ b/src/package.json
@@ -16,7 +16,7 @@
         "ui"
     ],
     "peerDependencies": {
-        "@master/style": "^1.0.0-alpha.36"
+        "@master/style": "^1.0.0-beta"
     },
     "repository": {
         "type": "git",
