feat: add @master/normal.css peer

--- a/src/package.json
+++ b/src/package.json
@@ -16,7 +16,8 @@
         "ui"
     ],
     "peerDependencies": {
-        "@master/style": "^1.0.0-beta"
+        "@master/style": "^1.0.0-beta",
+        "@master/normal.css": ">=1.0.0"
     },
     "repository": {
         "type": "git",
