--- a/src/package.json
+++ b/src/package.json
@@ -5,7 +5,7 @@
     "author": "Aoyue Design LTD.",
     "main": "index.js",
     "types": "index.d.ts",
-    "funding": "https://opencollective.com/master-style",
+    "funding": "https://opencollective.com/master-co",
     "private": false,
     "keywords": [
         "style",
@@ -20,6 +20,6 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/master-style/styles.git"
+        "url": "https://github.com/master-co/styles.git"
     }
 }
