--- a/src/package.json
+++ b/src/package.json
@@ -2,7 +2,7 @@
     "name": "@master/styles",
     "license": "MIT",
     "description": "Freely stylize HTML with unlimited CSS style variants ( less than 13KB )",
-    "author": "Aoyue Design LTD.",
+    "author": "Aoyue Design LLC.",
     "main": "index.js",
     "types": "index.d.ts",
     "funding": "https://opencollective.com/master-co",
