fix: package.json funding

--- a/src/package.json
+++ b/src/package.json
@@ -5,7 +5,7 @@
     "author": "Aoyue Design LLC.",
     "main": "index.js",
     "types": "index.d.ts",
-    "funding": "https://opencollective.com/master-co",
+    "funding": "https://docs.master.co/styles/donate",
     "homepage": "https://styles.master.co",
     "private": false,
     "keywords": [
