--- a/.github/workflows/check-pull-request-title.yml
+++ b/.github/workflows/check-pull-request-title.yml
@@ -18,4 +18,4 @@ jobs:
           context-name: conventional-pr-title
           preset: conventional-changelog-angular@latest
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.MASTER_GITHUB_TOKEN }}
