--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -16,7 +16,7 @@ body:
       validations:
           required: true
 
-    - type: input
+    - type: textarea
       id: reproduction
       attributes:
           label: Reproduction
