--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "scripts": {
         "update": "git fetch package js && git merge package/js",
         "build": "npm i --production && cd src && npm i && cd .. && webpack --config webpack.prod.js",
-        "serve": "cd src && npm i && cd .. && npm i && webpack serve --config webpack.dev.js",
+        "dev": "cd src && npm i && cd .. && npm i && webpack serve --config webpack.dev.js",
         "start": "cd src && npm i && cd .. && npm i && webpack serve --config webpack.dev.js --open",
         "update:readme": "m package render README.md"
     },
