test: add jest for test unit

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
         "build": "npm i --production && cd src && npm i && cd .. && webpack --config webpack.prod.js",
         "dev": "cd src && npm i && cd .. && npm i && webpack serve --config webpack.dev.js",
         "start": "cd src && npm i && cd .. && npm i && webpack serve --config webpack.dev.js --open",
-        "update:readme": "m package render README.md"
+        "update:readme": "m package render README.md",
+        "test": "jest"
     },
     "dependencies": {
         "@babel/core": "^7.16.0",
@@ -30,7 +31,10 @@
     },
     "devDependencies": {
         "@master/cli": "^1.0.0-alpha.22",
+        "@types/jest": "^27.5.1",
         "html-webpack-plugin": "^5.5.0",
+        "jest": "^28.1.0",
+        "ts-jest": "^28.0.3",
         "tsconfig-paths-webpack-plugin": "^3.5.2",
         "webpack-dev-server": "^4.6.0"
     },
