--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,3 @@
 github: master-co
 open_collective: master-co
-custom: https://docs.master.co/styles/donate
+custom: https://docs.master.co/css/donate
