--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,5 +1,6 @@
 name: "Feature Request"
-description: Propose a new feature in `@master/css`
+description: Propose a new feature in Master CSS
+title: '✨ '
 labels: [enhancement]
 
 body:
