--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,7 +1,7 @@
 blank_issues_enabled: true
 contact_links:
   - name: Questions & Discussions
-    url: https://github.com/master-co/css/discussions
+    url: https://github.com/master-co/﹏/discussions
     about: Use GitHub discussions for forum-like discussions and questions.
   - name: Discord Chat
     url: https://discord.gg/sZNKpAAAw6
