--- a/.github/ISSUE_TEMPLATE/docs_request.yml
+++ b/.github/ISSUE_TEMPLATE/docs_request.yml
@@ -1,4 +1,4 @@
-name: 'Documentation'
+name: '📄 Documentation'
 description: A request to update or improve documentation
 title: '📄 '
 labels: [documentation]
