--- a/.github/ISSUE_TEMPLATE/docs_request.yml
+++ b/.github/ISSUE_TEMPLATE/docs_request.yml
@@ -19,6 +19,6 @@ body:
   - type: input
     attributes:
       label: Does the docs page already exist? Please link to it.
-      placeholder: https://docs.master.co/﹏
+      placeholder: https://
     validations:
       required: false
