--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "@master/styles",
     "scripts": {
         "update": "git fetch package js && git merge package/js",
-        "build": "npm i --production && cd src && npm i && cd .. && webpack --config webpack.prod.js",
+        "build": "npm i --production && cd src && npm i && cd .. && webpack --config webpack.prod.js && cp ./dist/index.js ./dist/master-css.min.js",
         "dev": "cd src && npm i && cd .. && npm i && webpack serve --config webpack.dev.js",
         "start": "cd src && npm i && cd .. && npm i && webpack serve --config webpack.dev.js --open",
         "update:readme": "m package render README.md",
