--- a/tsconfig.prod.json
+++ b/tsconfig.prod.json
@@ -2,6 +2,6 @@
     "extends": "./tsconfig.json",
     "include": [
         "./src/**/*index.ts",
-        "./src/**/*.d.ts"
+        "./src/**/*.d.ts",
     ]
 }
