feat: support esm

--- a/src/package.json
+++ b/src/package.json
@@ -3,7 +3,8 @@
     "license": "MIT",
     "description": "A Virtual CSS language with enhanced syntax. ( ~13KB )",
     "author": "Aoyue Design LLC.",
-    "main": "index.js",
+    "main": "main.js",
+    "module": "index.js",
     "types": "index.d.ts",
     "funding": "https://docs.master.co/css/donate",
     "homepage": "https://css.master.co",
