--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "sideEffects": false,
     "scripts": {
         "update": "git fetch package js && git merge package/js",
-        "build": "npm i --production && cd src && npm i && cd .. && webpack --config webpack.prod.js && cp ./dist/index.js ./dist/master-css.min.js",
+        "build": "npm i --production && cd src && npm i && cd .. && webpack --config webpack.prod.js && tsc --project tsconfig.prod.json -m esnext --declaration",
         "dev": "cd src && npm i && cd .. && npm i && webpack serve --config webpack.dev.js",
         "start": "cd src && npm i && cd .. && npm i && webpack serve --config webpack.dev.js --open",
         "update:readme": "m package render README.md",
