--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
     "sideEffects": false,
     "scripts": {
         "update": "git fetch package js && git merge package/js",
-        "build": "npm i --production && cd src && npm i && cd .. && webpack --config webpack.prod.js && tsc --project tsconfig.prod.json -m esnext --declaration",
-        "dev": "cd src && npm i && cd .. && npm i && webpack serve --config webpack.dev.js",
+        "build": "npm i --production && cd src && npm i && cd .. && npm run plugin && webpack --config webpack.prod.js && tsc --project tsconfig.prod.json -m esnext --declaration",
+        "dev": "cd src && npm i && cd .. && npm i && npm run plugin && webpack serve --config webpack.dev.js",
+        "plugin": "tsc ./create-color-scss --esModuleInterop",
         "start": "cd src && npm i && cd .. && npm i && webpack serve --config webpack.dev.js --open",
         "update:readme": "m package render README.md",
         "test": "jest"
