--- a/.releaserc.json
+++ b/.releaserc.json
@@ -31,7 +31,7 @@
         [
             "@semantic-release/exec",
             {
-                "prepareCmd": "npm run build"
+                "prepareCmd": "npm run build && npm run package"
             }
         ],
         [
