--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
         "baseUrl": "./",
         "sourceMap": true,
         "experimentalDecorators": true,
-        "moduleResolution": "node",
+        "moduleResolution": "Node",
         "esModuleInterop": true,
         "target": "ESNext",
         "module": "ESNext",
