--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,14 +8,20 @@ workflows:
           context: Master
 
 jobs:
+  test:
+    docker:
+      - image: "cimg/node:17.1.0"
+    parallelism: 10
+    steps:
+      - run:
+          name: test
+          command: npm i && npx jest --maxWorkers=2
+
   release:
     docker:
       - image: "cimg/node:17.1.0"
     steps:
       - checkout
-      - run:
-          name: test
-          command: npm i && npx jest --maxWorkers=2
       - run:
           name: Copy package.json to ./dist for verification release
           command: mkdir -p ./dist && cp ./src/package.json ./dist/package.json
