--- a/src/package.json
+++ b/src/package.json
@@ -4,13 +4,13 @@
     "description": "A Virtual CSS language with enhanced syntax. ( ~13KB )",
     "author": "Aoyue Design LLC.",
     "main": "index.js",
-    "module": "index.esm.js",
-    "types": "index.d.ts",
+    "module": "esm/index.js",
+    "types": "esm/index.d.ts",
     "exports": {
         ".": {
             "require": "./index.js",
-            "import": "./index.esm.js",
-            "types": "./index.d.ts"
+            "import": "./esm/index.js",
+            "types": "./esm/index.d.ts"
         }
     },
     "funding": "https://docs.master.co/css/donate",
