--- a/src/package.json
+++ b/src/package.json
@@ -6,6 +6,7 @@
     "main": "index.js",
     "module": "esm/index.js",
     "types": "esm/index.d.ts",
+    "sideEffects": false,
     "exports": {
         ".": {
             "require": "./index.js",
