--- a/src/package.json
+++ b/src/package.json
@@ -6,7 +6,9 @@
     "main": "index.js",
     "module": "esm/index.js",
     "types": "esm/index.d.ts",
-    "sideEffects": false,
+    "sideEffects": [
+        "./polyfills/css-escape.js"
+    ],
     "exports": {
         ".": {
             "require": "./index.js",
