--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@
 # dependencies
 /node_modules
 /src/node_modules
+/examples/**/*node_modules
+/examples/**/*dist
 
 # profiling files
 chrome-profiler-events*.json
