--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
     "name": "@master/css",
     "scripts": {
-        "build": "node package.js && tsc",
+        "build": "node package && tsc",
+        "dev": "node dev",
         "package": "npm run build && cp README.md LICENSE ./src/package.json ./dist",
         "update": "git fetch package js && git merge package/js",
         "update:readme": "m package render README.md",
