--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
         "test": "jest"
     },
     "devDependencies": {
+        "@swc/core": "^1.3.9",
+        "@swc/jest": "^0.2.23",
         "@types/jest": "^27.5.2",
         "@types/node": "^18.11.0",
         "dedent": "^0.7.0",
         "esbuild": "^0.15.10",
-        "jest": "^28.1.0",
+        "jest": "^28.1.3",
         "ts-jest": "^28.0.3"
     },
     "files": [
