--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
         "module": "ESNext",
         "skipLibCheck": true,
         "declaration": true,
+        "sourceMap": true,
         "lib": [
             "es2021",
             "dom"
