--- a/package.json
+++ b/package.json
@@ -1,21 +1,20 @@
 {
     "name": "@master/css",
     "scripts": {
-        "build": "node package && tsc",
+        "build": "rm -rf dist && esbuild src/index.ts --outfile=dist/index.js --minify --bundle --format=cjs --sourcemap",
+        "build:esm": "tsc --outDir dist/esm",
         "package": "npm run build && cp README.md LICENSE ./src/package.json ./dist",
-        "update": "git fetch package js && git merge package/js",
-        "update:readme": "m package render README.md",
         "test": "jest"
     },
     "devDependencies": {
-        "@swc/core": "^1.3.9",
-        "@swc/jest": "^0.2.23",
         "@types/jest": "^27.5.2",
         "@types/node": "^18.11.0",
         "dedent": "^0.7.0",
         "esbuild": "^0.15.10",
+        "esbuild-jest": "^0.5.0",
         "jest": "^28.1.3",
-        "ts-jest": "^28.0.3"
+        "ts-jest": "^28.0.3",
+        "typescript": "^4.8.4"
     },
     "files": [
         "dist"
