--- a/.releaserc.json
+++ b/.releaserc.json
@@ -31,7 +31,7 @@
         [
             "@semantic-release/exec",
             {
-                "prepareCmd": "npm run package"
+                "prepareCmd": "npm run build && cp README.md LICENSE src/package.json dist"
             }
         ],
         [
