--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "devDependencies": {
         "@types/jest": "^27.5.2",
         "@types/node": "^18.11.0",
+        "@typescript-eslint/eslint-plugin": "^5.40.1",
+        "@typescript-eslint/parser": "^5.40.1",
         "dedent": "^0.7.0",
         "esbuild": "^0.15.10",
         "esbuild-jest": "^0.5.0",
+        "eslint": "^8.25.0",
         "jest": "^28.1.3",
         "ts-jest": "^28.0.3",
         "typescript": "^4.8.4"
