--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,18 +10,21 @@ workflows:
 jobs:
   test:
     docker:
-      - image: "cimg/node:17.1.0"
+      - image: 'cimg/node:17.1.0'
     steps:
       - checkout
   release:
     docker:
-      - image: "cimg/node:17.1.0"
+      - image: 'cimg/node:17.1.0'
     parallelism: 4
     steps:
       - checkout
       - run:
+          name: lint
+          command: npm run lint
+      - run:
           name: test
-          command: npm i && npx jest --maxWorkers=2
+          command: npm i && npx jest --maxWorkers=4
       - run:
           name: Copy package.json to ./dist for verification release
           command: mkdir -p ./dist && cp ./src/package.json ./dist/package.json
