--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,10 +21,10 @@ jobs:
       - checkout
       - run:
           name: lint
-          command: npm run lint
+          command: npm i && npm run lint
       - run:
           name: test
-          command: npm i && npx jest --maxWorkers=4
+          command: npx jest --maxWorkers=4
       - run:
           name: Copy package.json to ./dist for verification release
           command: mkdir -p ./dist && cp ./src/package.json ./dist/package.json
