--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,9 @@
     "javascript.format.semicolons": "remove",
     "editor.codeActionsOnSave": {
         "source.fixAll": true
-    }
+    },
+    "[yaml]": {
+        "editor.insertSpaces": true,
+        "editor.tabSize": 4
+    },
 }
