--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,18 +16,35 @@ jobs:
     release:
         docker:
             - image: 'cimg/node:17.1.0'
-        parallelism: 4
+        parallelism: 10
         steps:
             - checkout
+            - restore_cache:
+                  name: Restore pnpm Package Cache
+                  keys:
+                      - pnpm-packages-{{ checksum "pnpm-lock.yaml" }}
+            - run:
+                  name: Install pnpm package manager
+                  command: |
+                      curl -L https://pnpm.js.org/pnpm.js | node - add --global pnpm@7
+            - run:
+                  name: Install Dependencies
+                  command: |
+                      pnpm install
+            - save_cache:
+                  name: Save pnpm Package Cache
+                  key: pnpm-packages-{{ checksum "pnpm-lock.yaml" }}
+                  paths:
+                      - node_modules
             - run:
                   name: lint
-                  command: npm i && npm run lint
+                  command: pnpm run lint
             - run:
                   name: test
-                  command: npx jest --maxWorkers=4
+                  command: pnpm run test --maxWorkers=4
             - run:
                   name: Copy package.json to ./dist for verification release
                   command: mkdir -p ./dist && cp ./src/package.json ./dist/package.json
             - run:
                   name: semantic release
-                  command: npm i semantic-release@18 @semantic-release/exec@6 && npx semantic-release || true
+                  command: semantic-release || true
