--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "lint": "eslint ./src"
     },
     "devDependencies": {
+        "@semantic-release/exec": "6",
         "@swc/core": "^1.3.9",
         "@swc/jest": "^0.2.23",
         "@types/jest": "^27.5.2",
@@ -20,6 +21,7 @@
         "esbuild": "^0.15.10",
         "eslint": "^8.25.0",
         "jest": "^28.1.3",
+        "semantic-release": "18",
         "ts-jest": "^28.0.3",
         "typescript": "^4.8.4"
     },
