--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,12 +10,12 @@ workflows:
 jobs:
     test:
         docker:
-            - image: znck/pnpm:latest
+            - image: 'cimg/node:18.11.0'
         steps:
             - checkout
     release:
         docker:
-            - image: znck/pnpm:latest
+            - image: 'cimg/node:18.11.0'
         parallelism: 4
         steps:
             - checkout
@@ -26,7 +26,7 @@ jobs:
             - run:
                   name: Install pnpm package manager
                   command: |
-                      curl -fsSL https://get.pnpm.io/install.sh | sh -
+                      npx pnpm add -g pnpm
             - run:
                   name: Install Dependencies
                   command: |
