--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
             - run:
                   name: Install pnpm package manager
                   command: |
-                      npx pnpm add -g pnpm
+                      npm i -g pnpm@7
             - run:
                   name: Install Dependencies
                   command: |
