--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,19 +4,28 @@ workflows:
     version: 2
     package:
         jobs:
+            - setup
+            - lint:
+                  requires:
+                      - setup
+            - test:
+                  requires:
+                      - setup
             - release:
                   context: Master
+                  requires:
+                      - lint
+                      - test
+
+executors:
+    node:
+        docker:
+            - image: 'cimg/node:17.9.1'
 
 jobs:
-    test:
-        docker:
-            - image: 'cimg/node:17.9.1'
-        steps:
-            - checkout
-    release:
-        docker:
-            - image: 'cimg/node:17.9.1'
-        parallelism: 2
+    setup:
+        resource_class: small
+        executor: node
         steps:
             - checkout
             - restore_cache:
@@ -32,12 +41,28 @@ jobs:
                   key: npm-packages-{{ checksum "package-lock.json" }}
                   paths:
                       - node_modules
+    lint:
+        resource_class: small
+        executor: node
+        steps:
+            - checkout
             - run:
                   name: Lint
                   command: npm run lint
+    test:
+        resource_class: small
+        executor: node
+        parallelism: 8
+        steps:
+            - checkout
             - run:
                   name: Test
-                  command: npx jest --maxWorkers=2
+                  command: npx jest --maxWorkers=8
+    release:
+        resource_class: small
+        executor: node
+        steps:
+            - checkout
             - run:
                   name: Copy src/package.json to dist for verification release
                   command: |
