--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,6 +36,7 @@ executors:
 
 jobs:
     lint:
+        resource_class: large
         executor: node
         steps:
             - checkout
@@ -44,6 +45,7 @@ jobs:
                   name: Lint
                   command: npm run lint
     test:
+        resource_class: large
         executor: node
         parallelism: 8
         steps:
@@ -53,6 +55,7 @@ jobs:
                   name: Test
                   command: npx jest --maxWorkers=8
     release:
+        resource_class: large
         executor: node
         steps:
             - checkout
