--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,10 +33,10 @@ executors:
     node:
         docker:
             - image: 'cimg/node:17.9.1'
+        resource_class: small
 
 jobs:
     lint:
-        resource_class: large
         executor: node
         steps:
             - checkout
@@ -45,7 +45,6 @@ jobs:
                   name: Lint
                   command: npm run lint
     test:
-        resource_class: large
         executor: node
         parallelism: 8
         steps:
@@ -55,7 +54,6 @@ jobs:
                   name: Test
                   command: npx jest --maxWorkers=8
     release:
-        resource_class: large
         executor: node
         steps:
             - checkout
