--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,7 @@ executors:
     node:
         docker:
             - image: 'cimg/node:17.9.1'
-        resource_class: large
+        resource_class: small
 
 jobs:
     lint:
