--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,6 +33,7 @@ executors:
     node:
         docker:
             - image: 'cimg/node:17.9.1'
+        resource_class: small
 
 jobs:
     lint:
@@ -59,6 +60,7 @@ jobs:
         resource_class: small
         steps:
             - checkout
+            - prepare_workspace
             - run:
                   name: Copy src/package.json to dist for verification release
                   command: |
